# finnews_sentiment

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_imports.py
configs/: sources.example.yaml  sources.examples.yaml  tickers.example.yaml  tickers.examples.yaml
finnews_sentiment/: db.py  settings.py
finnews_sentiment/etl/: enrich_articles.py  fetch_prices.py  ingest_rss.py
finnews_sentiment/features/: build_dataset.py  compute_sentiment.py
scripts/: analyze_sentiment_vs_returns.py  backdate_articles.py  backdate_safely.py  diagnose_articles.py  join_sentiment_returns.py  peek_articles.py  peek_prices.py  refresh_all.bat  train_baseline_model.py  update_date.py
